Care & Maintenance Maintenance

--- a/Plum tree.html
+++ b/Plum tree.html
@@ -36,8 +36,10 @@
 
         <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-        <h2> Care & Maitnence </h2>
-
+        <h2> Care & Maintenance </h2>
+        <i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+          <br>
+          <br>
         <p class="textblock">
         Febuary, March, April, August, September, October:
         <br>
