--- a/Blackberry (himalayan and thornless).html
+++ b/Blackberry (himalayan and thornless).html
@@ -37,6 +37,9 @@
         <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
         <h2> Care & Maitnence </h2>
+        <i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+          <br>
+          <br>
 
         <p class="textblock"> Himalayan blackberry is an invasive species at MOP. If left to its own devices, it will grow everywhere! Proper pruning and maintenance to set healthy boundaries are needed. </p>
 
