--- a/Phormium tenax.html
+++ b/Phormium tenax.html
@@ -37,7 +37,9 @@
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maintenance </h2>
-
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+  <br>
+  <br>
 <p class="textblock">
 March, April, May: <br>
 Cut back dead leaves <br>
