Origins spell check

--- a/Fennel.html
+++ b/Fennel.html
@@ -88,11 +88,11 @@
 <br>
 <!-- ORGINS 💌 -->
 
-<button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+<button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
 <!-- End of orgins -->
