--- a/Plum tree.html
+++ b/Plum tree.html
@@ -109,11 +109,11 @@ Need be leave and stalks for dyes and pigments.
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Southeastern Europe and Western Asia. </p>        </div>
 <!-- End of orgins -->
