--- a/Weld.html
+++ b/Weld.html
@@ -94,11 +94,11 @@ Start to seed or dirrectly to sow (bianually).
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="orgins()"><p> Orgins<p> </button>
+        <button class="icons" onclick="orgins()"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
 <!-- End of orgins -->
