dipship mistake fixed

--- a/Apple tree.html
+++ b/Apple tree.html
@@ -39,7 +39,7 @@
         <h2> Care & Maintenance </h2>
 
         <p class="textblock">
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
   <br>
   <br>
 February, March, April, May:
