--- a/Plantain.html
+++ b/Plantain.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/Plantain2.jpg);">
+<body ID="frame_test" style="background-image:url(images/Plantain2.jpg); height:1500px;">
   <div ID="info">
       <div class="righthandline">
 
@@ -37,7 +37,7 @@
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maintenance </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
   <br>
   <br>
 <p class="textblock"> Can take care of itself. </p>
@@ -59,7 +59,7 @@
           <h2> Harvest </h2>
 
           <p class="textblock"> Harvest leaves in summer for dyes or skin salves. <br>
-        <i> Experiment in cordage and break apart a leaf. Pull out the inner fibres. <span><i>Twist, twist, twist.</i> </span></i> </p>        </div>
+         Experiment in cordage and break apart a leaf. Pull out the inner fibres. <span><i>Twist, twist, twist.</i> </span> </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
