--- a/Chestnut.html
+++ b/Chestnut.html
@@ -36,8 +36,8 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+<h2> Care & Maintenance </h2>
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
   <br>
   <br>
 <p class="textblock"> info on the care and maintnece of milkweed. </p>
