--- a/Fennel.html
+++ b/Fennel.html
@@ -37,10 +37,10 @@
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maintenance </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
   <br>
   <br>
-<p class="textblock"> Not much maitnece needed. If they grow too big and tall for their own good, stake and lean upright.  </p>
+<p class="textblock"> Not much maintenance needed. If they grow too big and tall for their own good, stake and lean upright.  </p>
 
 
         </div>
