--- a/St.john's wort.html
+++ b/St.john's wort.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/St.johnswort2.jpg);">
+<body ID="frame_test" style="background-image:url(images/St.johnswort2.jpg); height:1200px;">
   <div ID="info">
       <div class="righthandline">
 
