--- a/Bamboo.html
+++ b/Bamboo.html
@@ -37,10 +37,13 @@
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maintenance </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
-  <br>
-  <br>
-<p class="textblock"> All year round: Trim and pleach to keep the pathways clear and corridors open. </p>
+<p class="textblock">
+
+  <i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
+    <br>
+    <br>
+
+   All year round: Trim and pleach to keep the pathways clear and corridors open. </p>
 
 
         </div>
