--- a/Comfrey.html
+++ b/Comfrey.html
@@ -36,11 +36,11 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maintenance </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
-  <br>
-  <br>
+<h2> Care & <br> Maintenance </h2>
 <p class="textblock">
+  <i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
+    <br>
+    <br>
 
   No need to baby comfrey, it will grow without help.
 <br>
