--- a/Finder.html
+++ b/Finder.html
@@ -133,13 +133,13 @@
 <br>
 <a href="Hazel.html">  Hazel  </a>
 <br>
-<a href="Ocean spray (iron wood).html">  Ocean Spray (Iron wood)  </a>
+<a href="Ocean spray (ironwood).html">  Ocean Spray (Ironwood)  </a>
 <br>
 <a href="Spruce tree.html">  Spruce Tree  </a>
 <br>
 <a href="White ash.html">  White Ash Tree  </a>
 <br>
-<a href-"Paulownia tree.html"> Paulownia tree </a>
+<a href="Paulownia tree.html"> Paulownia tree </a>
 <br>
 <a href="Yellow willow.html">  Yellow Willow  </a>
 
@@ -180,7 +180,7 @@
 <br>
 <a href="Quince.html">  Quince  </a>
 <br>
-<a href="Rasberry.html">  Rasberry  </a>
+<a href="Raspberry.html">  Raspberry  </a>
 <br>
 <a href="Spruce tree.html">  Spruce Tree  </a>
 <br>
