--- a/Hazel.html
+++ b/Hazel.html
@@ -37,10 +37,14 @@
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maintenance </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
-  <br>
-  <br>
-<p class="textblock"> All year: <br>
+
+<p class="textblock">
+  <i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
+    <br>
+    <br>
+    
+All year: <br>
+
 Inspect hazel tree for fungus--remove immediately. <span><i>Out, damned spot</i></span> <br>
 Dispose of clippings far away.  </p>
 
