--- a/Dandelion.html
+++ b/Dandelion.html
@@ -37,11 +37,11 @@
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
 <h2> Care & Maintenance </h2>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. <i>
-  <br>
-  <br>
-<p class="textblock"> If you leave them, they will grow. </p>
 
+<p class="textblock"> If you leave them, they will grow. </p>
+<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
+  <br>
+  <br>
 
         </div>
 
