Plant write-ups imputed 🏁

--- a/Fennel.html
+++ b/Fennel.html
@@ -38,11 +38,21 @@
 
 <h2> Care & Maintenance </h2>
 
-<p class="textblock"> Not much maintenance needed. If they grow too big and tall for their own good, stake and lean upright.  </p>
-<i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
+<p class="textblock">
+  i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
   <br>
   <br>
+March:
+<br>
+Cut back fennel stocks if necessary for you.
 
+Summer —> Autumn:
+As they grow, fennel may need help to stay upright.
+<br>
+Build supports with willow whips and other spare sticks from the garden.
+<br>
+Keep tall stocks as an insect habitat.
+</p>
         </div>
 
 <!-- End of care info -->
@@ -58,7 +68,16 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Spring foradge for food. Yum! </p>        </div>
+          <p class="textblock">
+Late Summer:
+<br>
+Harvest fennel seeds from flowers that have turned brown
+<br>
+<br>
+September:
+<br>
+Leaves for tea.
+ </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -71,19 +90,25 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Food! </p> </p>        </div>
+          <p class="textblock">
+<br>
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  ~⚘~&nbsp;	  ~⚘~<br>
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;~⚘~ Food and tea ~⚘~<br>
+&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; ~⚘~&nbsp;		~⚘~
+
+           </p>       </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
 
-<button class="icons" onclick="showhide('iconsinfo')"><p> ID<p> </button>
+<button class="icons" onclick="showhide('idinfo')"><p> ID<p> </button>
 
         <div id="idinfo" class="infoblock" style="display:none">
           <img src="images/id.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Anethum%20graveolens&noTransfer=0" style="text-decoration:underline;"> How to identifying dill weed. </a> </p>        </div>
+          <p class="textblock"> <a href="" style="text-decoration:underline;"> How to identifying Fennel. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
@@ -94,7 +119,7 @@
 
           <h2> Origins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> [coming soon]</p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -106,7 +131,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about dill weed with earthandmapping(at)gmail.com. </p>        </div>
+          <p class="textblock"> Share your stories about Fennel with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
@@ -114,7 +139,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Dill Weed &nbsp; <i>Anethum graveolens</i></h1>
+          <h1> Fennel &nbsp; <i>Foeniculum vulgare</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
