--- a/Tansy.html
+++ b/Tansy.html
@@ -44,7 +44,7 @@
     <br>
   Many see it as a weed. <br>
   A self-seeding plant <br>
-  that needs not maintnece. <br>
+  that needs not maintenance. <br>
   Harvest when it is taking over other plants personal space. </p>
 
 
@@ -64,7 +64,7 @@
           <h2> Harvest </h2>
 
           <p class="textblock">
-            Early spring through summer:
+            Early spring through summer:<br>
             Harvest flowers and leaves for natural dyes.  </p>        </div>
 
 <!-- End of harvest info  -->
@@ -113,7 +113,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Share your stories about tansy with earthandmapping(at)gmail.com. </p>        </div>
       </div>
 <!-- End of stories -->
 
