--- a/White ash.html
+++ b/White ash.html
@@ -42,6 +42,24 @@
 <i> CHECK CARE INSTRUCTIONS FOR YOUR BIO REGION. NOTES HERE ARE FOR THE PACIFIC NORTH WEST. </i>
   <br>
   <br>
+  February, March, April, May:
+<br>
+Prune, mulch, weed and fertilize with compost tea.
+<span> <i> We could all use a warm cup of tea after so many rainy days. </i></span>
+<br><br>
+June, July:
+<br>
+Weed. <span><i>Bye Bye.</i></span>
+<br> <br>
+August, September, October:
+<br>
+Trim water shoots, weed some more, prune and serve compost tea.
+<br> <br>
+November:
+<br>
+Snip, snip, snip. (Prune)
+<br> <br>
+
         </div>
 
 <!-- End of care info -->
@@ -57,7 +75,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Early spring. Harvest only what's needed.</p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -70,7 +88,11 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock">
+Ash is an excellent hardwood for big and small projects.
+<br> It has an open grain structure and light colouring.
+<br> Not easy to carve with.
+</p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -82,7 +104,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> [coming soon] </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
@@ -93,7 +115,7 @@
 
           <h2> Origins </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Native to eastern and central "North America"/Turtle Island. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -105,7 +127,7 @@
 
           <h2> Stories </h2>
 
-          <p class="textblock"> info on the care and maintnece of weld. </p>        </div>
+          <p class="textblock"> Share your stories about white ash with earthandmapping(at)gmail.com </p>        </div>
       </div>
 <!-- End of stories -->
 
