--- a/map.html
+++ b/map.html
@@ -3443,7 +3443,7 @@
 
 
   <button class="leave" > <a href="Finder.html">~Jump to index~</a></button>
-  <button class="leave" > <a href="index.html">~Back to entrence~</a></button>
+  <button class="leave" > <a href="index.html">~Back to entrance~</a></button>
 
 
 
